--- a/src/Routes/About.css
+++ b/src/Routes/About.css
@@ -2,7 +2,7 @@
     position: relative;
     height: 100vh;
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 .about-container::before{
@@ -57,11 +57,11 @@
     margin: auto;
     text-align: center;
     padding: 1rem;
-    max-width: 400px;
+    max-width: 500px;
 }
 
 .about .left p{
-    margin: 1.2rem 0;
+    margin: 1rem 0;
 }
 
 .about .right{
@@ -98,7 +98,7 @@
     border: 2px solid #fff;
     padding: 50px;
     max-width: 95%;
-    margin: auto;
+    margin: 1rem auto;
     color: #fff;
 }
 
